--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="certification">
                 <div class="divEducation">
                     <img src="./images/coderasd.png" alt="">
-                    <p class="descriptionEducation">Im learning javaScript at CoderHouse to know how to programm functionally a modern page like a e-commerce </p>
+                    <p class="descriptionEducation">Im learning javaScript at CoderHouse to know how to program functionally a modern page like a e-commerce </p>
                 </div>
             </div>
         </section>
@@ -109,42 +109,6 @@
                 <div>
                     <a class="demo" href="https://erichernanbellezza.github.io/chat-app-css-illustration-master/">Demo</a>
                     <a class="linkCode" href="https://github.com/erichernanbellezza/chat-app-css-illustration-master">Code</a>
-                </div>
-            </div>
-            <div class="project">
-                <img src="./images/clipboard landing page.png" alt="">
-                <h3>Clipboard Landing Page</h3>
-                <p>This was builded with SCSS , HTML. I used flex for the layout, for margin and padding was used viewport, for text was used 'rem'. It's responsive on any device</p>
-                <div>
-                    <a class="demo" href="https://erichernanbellezza.github.io/Clipboard-landing-Page/">Demo</a>
-                    <a class="linkCode" href="https://github.com/erichernanbellezza/Clipboard-landing-Page">Code</a>
-                </div>
-            </div>
-            <div class="project">
-                <img src="./images/clipboard landing page.png" alt="">
-                <h3>Clipboard Landing Page</h3>
-                <p>This was builded with SCSS , HTML. I used flex for the layout, for margin and padding was used viewport, for text was used 'rem'. It's responsive on any device</p>
-                <div>
-                    <a class="demo" href="https://erichernanbellezza.github.io/Clipboard-landing-Page/">Demo</a>
-                    <a class="linkCode" href="https://github.com/erichernanbellezza/Clipboard-landing-Page">Code</a>
-                </div>
-            </div>
-            <div class="project">
-                <img src="./images/clipboard landing page.png" alt="">
-                <h3>Clipboard Landing Page</h3>
-                <p>This was builded with SCSS , HTML. I used flex for the layout, for margin and padding was used viewport, for text was used 'rem'. It's responsive on any device</p>
-                <div>
-                    <a class="demo" href="https://erichernanbellezza.github.io/Clipboard-landing-Page/">Demo</a>
-                    <a class="linkCode" href="https://github.com/erichernanbellezza/Clipboard-landing-Page">Code</a>
-                </div>
-            </div>
-            <div class="project">
-                <img src="./images/clipboard landing page.png" alt="">
-                <h3>Clipboard Landing Page</h3>
-                <p>This was builded with SCSS , HTML. I used flex for the layout, for margin and padding was used viewport, for text was used 'rem'. It's responsive on any device</p>
-                <div>
-                    <a class="demo" href="https://erichernanbellezza.github.io/Clipboard-landing-Page/">Demo</a>
-                    <a class="linkCode" href="https://github.com/erichernanbellezza/Clipboard-landing-Page">Code</a>
                 </div>
             </div>
         </section>
